2002-07-07  Bu FeiMing  <mybird@online.sh.cn>

	* src/globals.c: version number was never updated for 1.3.

2002-05-09  Matthew L Daniel  <mdaniel@scdi.com>

	* src/ctabs.c (print_error_maps): Fix bug for Java output.
	* jikespg.spec: New file for rpm generation.

2002-03-05  Eric Blake  <ebb9@email.byu.edu>

	* Makefile: Add.
	* src/ChangeLog: Remove.
	* src/ctabs.c: Update copyright.

2001-10-10  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile:
	* src/ctabs.c:
	* src/common.h: 
	* src/globals.c: 
	* src/lpgparse.c:
	* src/lpgparse.h: Fix copyright issues before release 1.3.

2001-09-05  Eric Blake  <ebb9@email.byu.edu>

	* src/Makefile: Changed default from AIX to gcc (but it is
	still hardcoded.  Anyone want to autoconfiscate this project?)
	* src/ctabs.c (init_file, exit_file, exit_parser_files)
	(print_definitions): 
	* src/common.h: 
	* src/globals.c: 
	* src/lpgparse.c (options): 
	* src/lpgparse.h: Added option jikes, to hack in headers
	and footers to files generated by jikespg.

1999-11-04    <shields@jikes.watson.ibm.com>

	Convert to use IBM Public License Version 1.0
	Make this version 1.2. The source files are unchanged except
	to change text related to the license name/version.
 
1999-02-10    <shields@jikes.watson.ibm.com>

	* Start ChangeLog.
	Just added *.am automake/autoconf files provided by Aaron Renn
	(arenn@urbanophile.com) as start toward support GNU's "configure"
	build process.
